[tool.poetry]
name = "python-imports"
version = "0.1.0"
description = ""
authors = ["Philipduerholt <philipduerholt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
test-pkg = {path = "modules/test_pkg"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
